Allow screen sharing

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -29,6 +29,7 @@ $menu = TERMINAL=wezterm fuzzel --list-executables-in-path
 exec-once = wezterm
 exec-once = firefox
 exec-once = hyprpaper
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
 #############################
